# bpm-rs

./: .gitignore  AGENTS.md  Cargo.toml  README-zh_CN.md  README.md  bootstrap.ps1  bootstrap.sh  build.rs  flake.nix  shell.nix  shim.rs
.github/workflows/: release.yml  test.yml
architecture-select/: Cargo.toml  README.md
architecture-select/src/: lib.rs
bpm/: Cargo.toml
bpm/src/: cli.rs  config.rs  lib.rs  main.rs  search.rs
bpm/src/installation/: download.rs  mod.rs  unzip.rs
bpm/src/storage/: db.rs  mod.rs
bpm/src/storage/db/: file.rs  mod.rs  native.rs
bpm/src/utils/: log.rs  mod.rs  path.rs  table.rs  url.rs  winpath.rs
integration_test/: dry_run.rs  local_install.rs  remove.rs
integration_test/common/: mod.rs
select-arch/: Cargo.toml
select-arch/src/: lib.rs
src/: cli.rs  command.rs  config.rs  context.rs  error.rs  lib.rs  log.rs  main.rs  search.rs
src/installation/: download.rs  mod.rs  unix.rs  unzip.rs  windows.rs
src/storage/: mod.rs
src/storage/db/: file.rs  mod.rs
src/utils/: constants.rs  err.rs  filter.rs  log.rs  mod.rs  path.rs  table.rs
tests/: context.rs  db.rs  dry_run.rs  install.rs  local_install.rs  remove.rs  repo.rs  unzip.rs
tests/common/: mod.rs
