[package]
edition = "2024"
name    = "bpm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow              = "1.0"
architecture-select = { path = "architecture-select" }
brotli              = "8"
bzip2               = "0.6"
bzip3               = { version = "0.12", features = ["bundled"] }
clap                = { version = "4.5", features = ["derive"] }
colored             = "3"
comfy-table         = "7.1"
config-file2        = { version = "0.4", features = ["all"] }
derive_more         = { version = "2", features = ["deref", "deref_mut", "from"] }
flate2              = "1"
fs_extra            = "1.3"
home                = "0.5"
log                 = "0.4"
lz4_flex            = "0.13"
lzma-rust2          = "0.16"
path-absolutize     = "3"
pretty_env_logger   = "0.5"
reqwest             = { version = "0", features = ["rustls", "json"] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
sevenz-rust2        = { version = "0.20" }
snap                = "1"
strum_macros        = "0.28"
tap                 = "1"
tar                 = "0.4"
tempfile            = "3"
terminal-menu       = "3.0"
thiserror           = "2"
tokio               = { version = "1.45", features = ["rt", "rt-multi-thread", "macros"] }
trauma              = { version = "2", features = ["rustls"] }
url                 = { version = "2", features = ["serde"] }
walkdir             = "2.4"
windows-env         = "0.2.0"
zip                 = "8"
zstd                = "0.13"

[target.'cfg(windows)'.dependencies]
mslnk       = "0.1.8"
windows-env = "0.2.0"

[target."cfg(unix)".dependencies]
libc = "0.2.186"

[[bin]]
name = "bpm"
path = "src/main.rs"

[[test]]
name = "local_install"
path = "integration_test/local_install.rs"

[[test]]
name = "remove"
path = "integration_test/remove.rs"

[[test]]
name = "dry_run"
path = "integration_test/dry_run.rs"


[profile.release]
lto       = true
opt-level = "s"
panic     = "abort"
strip     = true
