[package]
authors     = ["lxl66566 <lxl66566@gmail.com>"]
categories  = ["command-line-utilities"]
description = "A binary package manager based on GitHub Releases"
edition     = "2024"
exclude     = ["AGENTS.md", "architecture-select"]
homepage    = "https://github.com/lxl66566/bpm-rs"
keywords    = ["binary", "package-manager", "github-releases"]
license     = "MIT"
name        = "bin-package-manager"
readme      = "README.md"
repository  = "https://github.com/lxl66566/bpm-rs"
version     = "0.1.0"

[dependencies]
anyhow              = "1.0"
architecture-select = { version = "0.1.0", path = "architecture-select" }
brotli              = "8"
bzip2               = "0.6"
bzip3               = { version = "0.12", features = ["bundled"] }
clap                = { version = "4.5", features = ["derive"] }
colored             = "3"
comfy-table         = "7.1"
config-file2        = { version = "0.5", features = ["all"] }
derive_more         = { version = "2", features = ["deref", "deref_mut", "from"] }
flate2              = "1"
flexi_logger        = { version = "0.31", optional = true }
fs_extra            = "1.3"
home                = "0.5"
log                 = "0.4"
lz4_flex            = "0.13"
lzma-rust2          = "0.16"
path-absolutize     = "3"
reqwest             = { version = "0.13", features = ["rustls", "json"] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
sevenz-rust2        = { version = "0.21" }
snap                = "1"
strum_macros        = "0.28"
tap                 = "1"
tar                 = "0.4"
tempfile            = "3"
terminal-menu       = "3.0"
thiserror           = "2"
tokio               = { version = "1.52", features = ["rt", "rt-multi-thread", "macros"] }
trauma              = { version = "2", features = ["rustls"] }
url                 = { version = "2", features = ["serde"] }
walkdir             = "2.4"
zip                 = "8.6"
zstd                = "0.13"

[build-dependencies]
zstd = "0.13"

[target.'cfg(windows)'.dependencies]
windows-env = "0.2.0"

[target."cfg(unix)".dependencies]
libc = "0.2.186"

[[bin]]
name = "bpm"
path = "src/main.rs"

[features]
bin     = ["flexi_logger"]
default = ["bin"]

[profile.release]
lto       = true
opt-level = "s"
panic     = "abort"
strip     = true
