[package]
authors     = ["Absolutex <lxl66566@gmail.com>"]
categories  = ["value-formatting"]
description = "Select the best match item based on platform and architecture. Used for github assets selection."
edition     = "2024"
homepage    = "https://github.com/lxl66566/bpm-rs/tree/main/architecture-select"
keywords    = ["architecture", "arch", "select", "select-arch", "system"]
license     = "MIT"
name        = "architecture-select"
readme      = "README.md"
repository  = "https://github.com/lxl66566/bpm-rs/"
version     = "0.1.0"

[dependencies]
