[package]
edition = "2021"
name    = "bpm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow              = "1.0.80"
architecture-select = { path = "../architecture-select" }
assert2             = "0.3.13"
clap                = { version = "4.5.1", features = ["derive"] }
colored             = "2.1.0"
comfy-table         = "7.1.1"
compress-tools      = "0.15.1"
derive_more         = { version = "1.0.0", features = ["deref", "deref_mut", "from"] }
die-exit            = { version = "0.5.0", features = ["red"] }
generator           = "0.8.3"
home                = "0.5.9"
log                 = "0.4.20"
native_db           = "0.8.1"
native_model        = "0.4.20"
path-absolutize     = "3.1.1"
pretty_env_logger   = "0.5.0"
reqwest             = { version = "0.12.8", features = ["json"] }
serde               = { version = "1.0.197", features = ["derive"] }
serde_json          = "1.0.114"
tap                 = "1.0.1"
tempfile            = "3.13.0"
terminal-menu       = "3.0.0"
thiserror           = "1.0.58"
tokio               = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
trauma              = "2.2.5"
url                 = { version = "2.5.0", features = ["serde"] }

[target."cfg(windows)".dependencies]
mslnk       = "0.1.8"
windows-env = "0.1.0"

[target."cfg(unix)".dependencies]
libc = "0.2.159"
